--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -37,10 +37,6 @@ jobs:
     - name: Setup MSBuild.exe
       uses: microsoft/setup-msbuild@v2
 
-    # Execute all unit tests in the solution
-    - name: Execute unit tests
-      run: dotnet test
-
     # Restore the application to populate the obj folder with RuntimeIdentifiers
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
@@ -52,4 +48,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Binaries
-        path: ${{ env.Output_Directory }}
+        path: ${{ env.Output_Directory }}\${{configuration}}
