--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -48,4 +48,4 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: Binaries
-        path: ${{ env.Output_Directory }}\${{ env.Configuration }}\net8.0
+        path: ${{ env.Output_Directory }}\${{ env.Configuration }}net8.0
