--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -1,10 +1,9 @@
-name: .NET Build
+name: .NET Build & Analize
 
 on:
   push:
     branches: [ "master" ]
   pull_request:
-    #branches: [ "master" ]
     types: [opened, synchronize, reopened]
 
 jobs:
@@ -13,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        configuration: [Debug, Release]
+        configuration: [Release]
 
     runs-on: windows-latest  # For a list of available runner types, refer to
                              # https://help.github.com/en/actions/reference/workflow-syntax-for-github-actions#jobsjob_idruns-on
