Modified XmlReaderExtensionMethods to extend string object rather than XmlReader object for easier testing. Modified FileDownloadTask factories to receive just the required values to create the object instead the full FileDownloadTask. Implemented tests for FileDownloadTaskStepFactory. Implemented tests for XmlReaderExtensionMethods.

--- a/src/Hyperar.HUM.Application/Hyperar.HUM.Application.csproj
+++ b/src/Hyperar.HUM.Application/Hyperar.HUM.Application.csproj
@@ -20,4 +20,8 @@
       <ProjectReference Include="..\Hyperar.HUM.Shared\Hyperar.HUM.Shared.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+        <InternalsVisibleTo Include="Hyperar.HUM.Application.UnitTest" />
+    </ItemGroup>
+
 </Project>
