--- a/src/Hyperar.HUM.Application.UnitTest/appSettings.json
+++ b/src/Hyperar.HUM.Application.UnitTest/appSettings.json
@@ -5,14 +5,14 @@
     "UserAgent": "Hattrick Ultimate Manager Integration Test",
     "Endpoints": {
       "Base": {
-        "Site": "https://localhost:12345/",
-        "AccessToken": "https://localhost:12345/oauth/access_token.ashx",
-        "Authorize": "https://localhost:12345/oauth/authorize.aspx",
+        "Site": "https://localhost/",
+        "AccessToken": "https://localhost/oauth/access_token.ashx",
+        "Authorize": "https://localhost/oauth/authorize.aspx",
         "Callback": "oob",
-        "CheckToken": "https://localhost:12345/oauth/check_token.ashx",
-        "InvalidateToken": "https://localhost:12345/oauth/invalidate_token.ashx",
-        "ProtectedResources": "https://localhost:12345/chppxml.ashx",
-        "RequestToken": "https://localhost:12345/oauth/request_token.ashx"
+        "CheckToken": "https://localhost/oauth/check_token.ashx",
+        "InvalidateToken": "https://localhost/oauth/invalidate_token.ashx",
+        "ProtectedResources": "https://localhost/chppxml.ashx",
+        "RequestToken": "https://localhost/oauth/request_token.ashx"
       },
       "ProtectedResources": {
         "ArenaDetails": {
