Updated nuget packages to be up-to-date. Updated dotnet-build.yml to include test run. Modified ImageFileDownloadTask step flow to move file write to the persister step instead of the download step. Moved WireMockServerFactory and constants to ChppApiClient project to be shared across all test projects. Moved all test projects to its own folder. Removed INavigator from LandingPageFactory since it was unused. Added ProtectedResourceUrlFactory tests. Added HattrickClient tests. Removed Hyperar.HUM.Application.IntegrationTest project since the integration test are in Hyperar.HUM.ChppApiClient.IntegrationTest project.

--- a/src/Hyperar.HUM.ChppApiClient.UnitTest/appSettings.json
+++ b/src/Hyperar.HUM.ChppApiClient.UnitTest/appSettings.json
@@ -1,18 +1,8 @@
 {
     "OAuth": {
-        "ConsumerKey": "piVduSWzvLhayDkS",
-        "ConsumerSecret": "M7RYb5raFtK7WmdC",
-        "UserAgent": "Hyperar.HUM.Application.UnitTest",
         "Endpoints": {
             "Base": {
-                "Site": "https://localhost/",
-                "AccessToken": "https://localhost/oauth/access_token.ashx",
-                "Authorize": "https://localhost/oauth/authorize.aspx",
-                "Callback": "oob",
-                "CheckToken": "https://localhost/oauth/check_token.ashx",
-                "InvalidateToken": "https://localhost/oauth/invalidate_token.ashx",
-                "ProtectedResources": "https://localhost/chppxml.ashx",
-                "RequestToken": "https://localhost/oauth/request_token.ashx"
+                "ProtectedResources": "https://chpp.hattrick.org/chppxml.ashx"
             },
             "ProtectedResources": {
                 "ArenaDetails": {
@@ -45,15 +35,15 @@
                     "Version": "1.5",
                     "Parameters": [ "userId" ]
                 },
-                "MatchDetails": {
-                    "FileName": "matchdetails",
-                    "Version": "3.1",
-                    "Parameters": [ "matchEvents", "matchId", "sourceSystem" ]
-                },
                 "MatchArchive": {
                     "FileName": "matchesarchive",
                     "Version": "1.5",
                     "Parameters": [ "teamId", "isYouth", "firstMatchDate", "lastMatchDate", "season", "includeHTO" ]
+                },
+                "MatchDetails": {
+                    "FileName": "matchdetails",
+                    "Version": "3.1",
+                    "Parameters": [ "matchEvents", "matchId", "sourceSystem" ]
                 },
                 "Matches": {
                     "FileName": "matches",
@@ -65,15 +55,15 @@
                     "Version": "2.1",
                     "Parameters": [ "sourceSystem", "matchId", "teamId" ]
                 },
-                "Players": {
-                    "FileName": "players",
-                    "Version": "2.5",
-                    "Parameters": [ "actionType", "orderBy", "teamId", "includeMatchInfo" ]
-                },
                 "PlayerDetails": {
                     "FileName": "playerdetails",
                     "Version": "3.0",
                     "Parameters": [ "actionType", "playerId", "includeMatchInfo", "teamId", "bidAmount", "maxBidAmount" ]
+                },
+                "Players": {
+                    "FileName": "players",
+                    "Version": "2.5",
+                    "Parameters": [ "actionType", "orderBy", "teamId", "includeMatchInfo" ]
                 },
                 "StaffAvatars": {
                     "FileName": "staffavatars",
