--- a/src/Hyperar.HUM.ChppApiClient.IntegrationTest/appSettings.json
+++ b/src/Hyperar.HUM.ChppApiClient.IntegrationTest/appSettings.json
@@ -1,18 +1,16 @@
 {
     "OAuth": {
-        "ConsumerKey": "piVduSWzvLhayDkS",
-        "ConsumerSecret": "M7RYb5raFtK7WmdC",
-        "UserAgent": "Hyperar.HUM.Application.UnitTest",
+        "UserAgent": "Hyperar.HUM.ChppApiClient.IntegrationTest",
         "Endpoints": {
             "Base": {
-                "Site": "https://localhost/",
-                "AccessToken": "https://localhost/oauth/access_token.ashx",
-                "Authorize": "https://localhost/oauth/authorize.aspx",
+                "Site": "https://localhost:{0}/",
+                "AccessToken": "https://localhost:{0}/oauth/access_token.ashx",
+                "Authorize": "https://localhost:{0}/oauth/authorize.aspx",
                 "Callback": "oob",
-                "CheckToken": "https://localhost/oauth/check_token.ashx",
-                "InvalidateToken": "https://localhost/oauth/invalidate_token.ashx",
-                "ProtectedResources": "https://localhost/chppxml.ashx",
-                "RequestToken": "https://localhost/oauth/request_token.ashx"
+                "CheckToken": "https://localhost:{0}/oauth/check_token.ashx",
+                "InvalidateToken": "https://localhost:{0}/oauth/invalidate_token.ashx",
+                "ProtectedResources": "https://localhost:{0}/chppxml.ashx",
+                "RequestToken": "https://localhost:{0}/oauth/request_token.ashx"
             },
             "ProtectedResources": {
                 "ArenaDetails": {
