--- a/src/Hyperar.HUM.ChppApiClient/Hyperar.HUM.ChppApiClient.csproj
+++ b/src/Hyperar.HUM.ChppApiClient/Hyperar.HUM.ChppApiClient.csproj
@@ -8,11 +8,18 @@
 
     <ItemGroup>
         <PackageReference Include="Hyperar.OAuthCore" Version="2.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.1" />
+        <PackageReference Include="WireMock.Net" Version="1.6.11" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\Hyperar.HUM.Shared\Hyperar.HUM.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <InternalsVisibleTo Include="Hyperar.HUM.Application.IntegrationTest" />
+        <InternalsVisibleTo Include="Hyperar.HUM.ChppApiClient.IntegrationTest" />
     </ItemGroup>
 
 </Project>
