Added "quiet" paramter to certificate trust command.

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -37,7 +37,7 @@ jobs:
       shell: pwsh
 
     - name: Trust SSL Certificate
-      run: dotnet dev-certs https --trust
+      run: dotnet dev-certs https --trust -q
       shell: pwsh
 
     - name: Execute Tests
