Added missing FileName constants and XmlFileType enum values. Added new unit tests for strategies. Renamed MatchArchive to MatchesArchive to conform with Hattrick CHPP Api documentation. Removed WireMockFactory certificate validation callback.

--- a/src/Hyperar.HUM.ChppApiClient.IntegrationTest/appSettings.json
+++ b/src/Hyperar.HUM.ChppApiClient.IntegrationTest/appSettings.json
@@ -48,7 +48,7 @@
                     "Version": "3.1",
                     "Parameters": [ "matchEvents", "matchId", "sourceSystem" ]
                 },
-                "MatchArchive": {
+                "MatchesArchive": {
                     "FileName": "matchesarchive",
                     "Version": "1.5",
                     "Parameters": [ "teamId", "isYouth", "firstMatchDate", "lastMatchDate", "season", "includeHTO" ]
