--- a/src/Hyperar.HUM.ChppApiClient.UnitTest/appSettings.json
+++ b/src/Hyperar.HUM.ChppApiClient.UnitTest/appSettings.json
@@ -35,7 +35,7 @@
                     "Version": "1.5",
                     "Parameters": [ "userId" ]
                 },
-                "MatchArchive": {
+                "MatchesArchive": {
                     "FileName": "matchesarchive",
                     "Version": "1.5",
                     "Parameters": [ "teamId", "isYouth", "firstMatchDate", "lastMatchDate", "season", "includeHTO" ]
