--- a/src/Hyperar.HUM.ChppApiClient.IntegrationTest/Hyperar.HUM.ChppApiClient.IntegrationTest.csproj
+++ b/src/Hyperar.HUM.ChppApiClient.IntegrationTest/Hyperar.HUM.ChppApiClient.IntegrationTest.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>net8.0-windows10.0.17763.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
+        <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
         <IsPackable>false</IsPackable>
