Removed empty Download folder. Added back InlineData on FileParseStrategyFactoryNotImplementedXmlFileType_ShouldThrowArgumentOutOfRangeException.

--- a/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
+++ b/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
@@ -10,6 +10,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <AvaloniaXaml Remove="ChppFile\Download\**" />
+      <Compile Remove="ChppFile\Download\**" />
+      <EmbeddedResource Remove="ChppFile\Download\**" />
+      <None Remove="ChppFile\Download\**" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.4">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -40,10 +47,6 @@
         <None Update="appSettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="ChppFile\Download\" />
     </ItemGroup>
 
     <ItemGroup>
