Fixed an issue in ReadNullableIdNameListNodeAsync where it would return an empty array instead of null when parsing an empty node. Fixed several issues in TeamDetailsParser, Unit tests are still missing. Added asset files for Unit tests for CheckToken and ManagerCompendium XML files. Added Xml file parsing unit tests (work in progress) and added XmlFileParserBase to share common methods between them. Updated FileDownloadTaskFactoryTests to reflect previously made changes to FileDownloadTaskFactory. Fixed an issue with ReadValueAsync extension method where it would return an empty string instead of null when reading an empty node. Updated ReadStringValueAsXmlReader_NodeValueShouldBeEqual unit test to reflect the previously mentioned change.

--- a/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
+++ b/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
@@ -47,10 +47,42 @@
         <None Update="appSettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Assets\Xml\CheckToken\CheckToken_AllScopes.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\CheckToken\CheckToken_NoScopes.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\CheckToken\CheckToken_ManageChallengesScope.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_Avatar.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_NationalTeamAssistant.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_NationalTeamCoach.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_NoAvatar.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_YouthLeague.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_YouthTeam.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
         <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Assets\Xml\WorldDetails\" />
+      <Folder Include="Assets\Xml\TeamDetails\" />
     </ItemGroup>
 
 </Project>
