Added ManagerCompendium XML Multiple Team test scenario.

--- a/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
+++ b/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
@@ -59,6 +59,9 @@
         <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_Avatar.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_MultipleTeam.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="Assets\Xml\ManagerCompendium\ManagerCompendium_NationalTeamAssistant.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
