Added ServerCertificateValidationCallback for tests to avoid exceptions on test run. Re-enabled unit test run.

--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -32,6 +32,9 @@ jobs:
     - name: Build
       uses: microsoft/setup-msbuild@v2
 
+    - name: Execute Tests
+      run: dotnet test $env:Solution_Name
+
     - name: Restore the application
       run: msbuild $env:Solution_Name /t:Restore /p:Configuration=$env:Configuration
       env:
