Work in Progress. Renamed ImageHelpers to ImageHelper and moved it to the root folder of the project. Added Players and Avatars XML files strategies. Renamed current generic Avatar node read method to Nullable and created a non nullable alternative. Moved Player Skill properties from SeniorPlayer to SeniorPlayerSkillSet. Created GetAvatarBytesAsync method to support both framed and frameless avatars. Started working on Avatars Unit Tests and added asset files. Removed pre-compiled avatar bytes properties to test on-the-fly avatar generator. Added missing Enums and adjusted classes.

--- a/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
+++ b/src/Hyperar.HUM.Application.UnitTest/Hyperar.HUM.Application.UnitTest.csproj
@@ -47,6 +47,18 @@
         <None Update="appSettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="Assets\Xml\Avatars\Avatars_NoSupporter_HallOfFame.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\Avatars\Avatars_NoSupporter_Players.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\Avatars\Avatars_Supporter_HallOfFame.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="Assets\Xml\Avatars\Avatars_Supporter_Players.xml">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <None Update="Assets\Xml\CheckToken\CheckToken_AllScopes.xml">
           <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
